public/css/styles.css
/* Copyright (c) 2025 Michael D Henderson. All rights reserved. */

body {
    background-color: black;
    color: #33ff33;
    font-family: 'Courier New', Courier, monospace;
    padding: 50px;
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

a {
    color: #33FF33;
    text-decoration: none;
    font-weight: bold;
    text-shadow: 0px 0px 5px rgba(51, 255, 51, 0.8);
}

a:hover {
    text-shadow: 0px 0px 10px rgba(51, 255, 51, 1);
    animation: blink 0.5s step-end infinite alternate;
}

.terminal {
    border: 2px solid #33ff33;
    padding: 20px;
    width: 80%;
    max-width: 600px;
    text-shadow: 0px 0px 5px rgba(51, 255, 51, 0.8);
    text-align: left;
}

@keyframes blink {
    50% { opacity: 0; }
}

.boot {
    font-size: 18px;
    animation: blink 1s step-end infinite;
}

.title {
    font-size: 24px;
    font-weight: bold;
    margin-top: 10px;
}

.message {
    font-size: 18px;
    margin-top: 15px;
}

